<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_attachment"
        android:icon="@drawable/ic_action_attachment"
        android:orderInCategory="100"
        android:title="@string/action_attachment"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_action_send"
        android:orderInCategory="200"
        android:title="@string/action_send"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help_feedback"
        android:orderInCategory="400"
        android:title="@string/help_feedback"
        app:showAsAction="never" />
</menu>