<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sreemoyeec662.inboxapp.ComposeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/composeFrom"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/gmail_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/composeTo"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_compose_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/composeCc"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_compose_cc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/composeBcc"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_compose_bcc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line_color" />

    <EditText
        android:id="@+id/et_compose_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/composeSubject"
        android:inputType="textEmailSubject" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/horizontal_line_color" />

    <EditText
        android:id="@+id/et_compose_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:hint="@string/composeEmail"
        android:inputType="textMultiLine" />
</LinearLayout>
